# savtools-py

./: .gitignore  LICENSE  README.md  flake.nix  pyproject.toml
dataset/: Iris_source.md
notebooks/: test.ipynb
pkgs/: default.nix
src/references/: pl.py
src/savtools/: __init__.py  operations.py
